[package]
name = "protean"
description = "A flexible data enum guaranteeing strict variant ordering for backward-compatible binary serialization."
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
keywords = ["container", "zero-copy", "data-types", "serialization"]
categories = ["data-structures", "encoding"]
authors = ["Reynaldo Bontje <rey.bontje80@gmail.com>"]
repository = "https://github.com/plugd-in/protean"

[dependencies]
delegate = { version = "0.13.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
stable_deref_trait = { version = "1.2.0", optional = true }
yoke = { version = "0.8.0", features = ["derive"], optional = true }

[dev-dependencies]
assert-order = "0.0.3"

[features]
default = ["serde"]
owned = ["dep:yoke", "dep:delegate", "dep:stable_deref_trait"]

[package.metadata.docs.rs]
features = ["serde", "owned"]
